RESOLVED FIXED196146
[iOS] Wrong scrolling behavior for nested absolute position elements inside overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=196146
Summary [iOS] Wrong scrolling behavior for nested absolute position elements inside o...
Antti Koivisto
Reported 2019-03-22 07:32:36 PDT
Scroll the test case: - Absolute layer is jittery during scrolling - Events pass through it to the scroller Both are signs of a missing positioning node.
Attachments
test (1.17 KB, text/html)
2019-03-22 07:39 PDT, Antti Koivisto
no flags
Patch (44.37 KB, patch)
2019-04-11 22:38 PDT, Simon Fraser (smfr)
no flags
Patch (35.69 KB, patch)
2019-04-11 22:51 PDT, Simon Fraser (smfr)
koivisto: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews123 for ios-simulator-wk2 (2.64 MB, application/zip)
2019-04-12 03:44 PDT, EWS Watchlist
no flags
Antti Koivisto
Comment 1 2019-03-22 07:39:23 PDT
Radar WebKit Bug Importer
Comment 2 2019-03-25 00:30:13 PDT
Simon Fraser (smfr)
Comment 3 2019-04-10 08:29:51 PDT
Actually we're incorrectly making a "Moves" node for the nested position:absolute.
Simon Fraser (smfr)
Comment 4 2019-04-11 22:38:01 PDT
Simon Fraser (smfr)
Comment 5 2019-04-11 22:38:20 PDT
*** Bug 196820 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2019-04-11 22:51:01 PDT
Antti Koivisto
Comment 7 2019-04-11 23:47:52 PDT
Regressions: Unexpected text-only failures (1) fast/scrolling/ios/overflow-scroll-overlap-6.html [ Failure ] You'll need to rebase for this progression.
EWS Watchlist
Comment 8 2019-04-12 03:44:40 PDT
Comment on attachment 367292 [details] Patch Attachment 367292 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11852526 New failing tests: fast/scrolling/ios/overflow-scroll-overlap-6.html
EWS Watchlist
Comment 9 2019-04-12 03:44:42 PDT
Created attachment 367312 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 10 2019-04-12 08:08:28 PDT
Antti Koivisto
Comment 11 2019-04-12 09:23:38 PDT
Actually, this is wrong: --- a/trunk/LayoutTests/fast/scrolling/ios/overflow-scroll-overlap-6-expected.txt +++ b/trunk/LayoutTests/fast/scrolling/ios/overflow-scroll-overlap-6-expected.txt @@ -2,5 +2,5 @@ case 1: -case 2: Scrollable 2 -case 3: Scrollable 3 +case 2: +case 3: Case 3 should remain scrollable.
Simon Fraser (smfr)
Comment 12 2019-04-12 10:43:54 PDT
(In reply to Antti Koivisto from comment #11) > Actually, this is wrong: > > --- > a/trunk/LayoutTests/fast/scrolling/ios/overflow-scroll-overlap-6-expected.txt > +++ > b/trunk/LayoutTests/fast/scrolling/ios/overflow-scroll-overlap-6-expected.txt > @@ -2,5 +2,5 @@ > > case 1: > -case 2: Scrollable 2 > -case 3: Scrollable 3 > +case 2: > +case 3: > > Case 3 should remain scrollable. Maybe the hit-testing code needs adjusting for nested absolutes.
Antti Koivisto
Comment 13 2019-04-12 10:49:58 PDT
> Maybe the hit-testing code needs adjusting for nested absolutes. Hit-testing code respects whatever positioning nodes are generated. You may have regressed something.
Simon Fraser (smfr)
Comment 14 2019-04-12 11:06:09 PDT
I'll investigate via bug 196868.
Note You need to log in before you can comment on or make changes to this bug.